--- a/index.html
+++ b/index.html
@@ -1,63 +1,96 @@
-<!DOCTYPE html> <!-- Mendefinisikan jenis dokumen HTML -->
-<html lang="en"> <!-- Membuka tag html dengan atribut bahasa Inggris -->
-<head> <!-- Membuka tag head yang berisi informasi meta tentang dokumen -->
-  <title>Webpage Design</title> <!-- Judul halaman web yang ditampilkan di tab browser -->
-  <link rel="stylesheet" href="style.css"> <!-- Menghubungkan file CSS eksternal dengan file HTML -->
-</head> <!-- Menutup tag head -->
-<body> <!-- Membuka tag body yang berisi konten yang ditampilkan kepada pengguna -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Webpage Design</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-<div class="main"> <!-- Membuka div dengan class "main" -->
-  <div class="navbar"> <!-- Membuka div dengan class "navbar" -->
-    <div class="icon"> <!-- Membuka div dengan class "icon" -->
-      <img class="logo" src="2.png" alt="Logo"> <!-- Menampilkan gambar logo -->
-    </div> <!-- Menutup div dengan class "icon" -->
+<div class="main">
+  <div class="navbar">
+    <div class="icon">
+      <img class="logo" src="2.png" alt="Logo">
+    </div>
 
-    <div class="menu"> <!-- Membuka div dengan class "menu" -->
-      <ul> <!-- Membuka tag ul untuk membuat daftar -->
-        <li><a href="#">HOME</a></li> <!-- Membuat item daftar dengan link ke halaman HOME -->
-        <li><a href="#">ABOUT</a></li> <!-- Membuat item daftar dengan link ke halaman ABOUT -->
-        <li><a href="#">SERVICE</a></li> <!-- Membuat item daftar dengan link ke halaman SERVICE -->
-        <li><a href="#">DESIGN</a></li> <!-- Membuat item daftar dengan link ke halaman DESIGN -->
-        <li><a href="#">CONTACT</a></li> <!-- Membuat item daftar dengan link ke halaman CONTACT -->
-      </ul> <!-- Menutup tag ul -->
-    </div> <!-- Menutup div dengan class "menu" -->
+    <div class="menu">
+      <ul>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">SERVICE</a></li>
+        <li><a href="#">DESIGN</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+    </div>
 
-  </div> <!-- Menutup div dengan class "navbar" -->
-  <div class="content"> <!-- Membuka div dengan class "content" -->
-    <h1>RUMAH SAKIT <br><span>IMMANUEL</span> <br>BANDUNG</h1> <!-- Menampilkan judul dan subjudul -->
-    <br/> <!-- Membuat baris baru -->
-    <p class="par"> <!-- Membuka paragraf dengan class "par" -->
+  </div>
+  <div class="content">
+    <h1>RUMAH SAKIT <br><span>IMMANUEL</span> <br>BANDUNG</h1>
+    <br/>
+    <p class="par">
       Sebagai salah satu Rumah Sakit Terbaik, Terbesar dan Tertua di kota Bandung
       <br> Sejak tahun 1910 kami selalu berupaya memberikan pelayanan kesehatan terbaik
-      <br> Moto kami adlaah "Anda tetap sehat adalah dambaan kami"
+      <br> Moto kami adalah "Anda tetap sehat adalah dambaan kami"
       <br> Ayo Segera daftar
-    </p> <!-- Menutup paragraf -->
+    </p>
 
-    <div class="form"> <!-- Membuka div dengan class "form" -->
-      <h2>Login Here</h2> <!-- Menampilkan judul form login -->
-      <label>
-        <input type="email" name="email" placeholder="Enter Email Here">
-      </label> <!-- Membuat input field untuk email -->
-      <label>
-        <input type="password" name="" placeholder="Enter Password Here">
-      </label> <!-- Membuat input field untuk password -->
-      <button class="btnn"><a href="#">Login</a></button> <!-- Membuat tombol login -->
+    <div class="form">
+      <h2>Login Here</h2>
+      <form id="loginForm">
+        <label>
+          <input type="email" id="email" name="email" placeholder="Enter Email Here">
+        </label>
+        <label>
+          <input type="password" id="password" name="password" placeholder="Enter Password Here">
+        </label>
+        <button type="button" class="btnn" onclick="login()">Login</button>
+      </form>
 
       <p class="link">Don't have an account<br>
-        <a href="#">Sign up </a> here </p> <!-- Membuat link untuk pendaftaran -->
-      <p class="liw">Log in with</p> <!-- Menampilkan teks "Log in with" -->
+        <a href="./register.html">Sign up</a> here </p>
 
-      <div class="icons"> <!-- Membuka div dengan class "icons" -->
-        <a href="#"><ion-icon name="logo-facebook"></ion-icon></a> <!-- Membuat ikon dan link ke Facebook -->
-        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a> <!-- Membuat ikon dan link ke Instagram -->
-        <a href="#"><ion-icon name="logo-twitter"></ion-icon></a> <!-- Membuat ikon dan link ke Twitter -->
-        <a href="#"><ion-icon name="logo-google"></ion-icon></a> <!-- Membuat ikon dan link ke Google -->
-        <a href="#"><ion-icon name="logo-skype"></ion-icon></a> <!-- Membuat ikon dan link ke Skype -->
-      </div> <!-- Menutup div dengan class "icons" -->
+      <p class="liw">Log in with</p>
 
-    </div> <!-- Menutup div dengan class "form" -->
-  </div> <!-- Menutup div dengan class "content" -->
-</div> <!-- Menutup div dengan class "main" -->
-<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script> <!-- Menambahkan skrip eksternal untuk ikon -->
-</body> <!-- Menutup tag body -->
-</html> <!-- Menutup tag html -->
+      <div class="icons">
+        <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+        <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+        <a href="#"><ion-icon name="logo-google"></ion-icon></a>
+        <a href="#"><ion-icon name="logo-skype"></ion-icon></a>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+<script>
+  function login() {
+    var email = document.getElementById('email').value;
+    var password = document.getElementById('password').value;
+
+    var xhr = new XMLHttpRequest();
+    xhr.open('POST', 'http://localhost:8000/login', true);
+    xhr.setRequestHeader('Content-Type', 'application/json');
+    xhr.onreadystatechange = function() {
+      if (xhr.readyState === XMLHttpRequest.DONE) {
+        if (xhr.status === 200) {
+          // Handle successful login
+          alert('login success')
+          console.log('Login successful');
+          // Redirect or update UI as needed
+        } else {
+          // Handle login failure
+          alert('login failed')
+          console.log('Login failed');
+          // Show error message or retry login
+        }
+      }
+    };
+    var data = JSON.stringify({ email: email, password: password });
+    xhr.send(data);
+  }
+</script>
+
+</body>
+</html>
